GID-9 [Backend] Implement Teams endpoints
