# app/controllers/router.go
@@ -29,52 +29,40 @@ func SetupRouter() *gin.Engine {
 	}))
 
 	// API routes
-	apiGroup := router.Group("/api")
-	apiGroup.Use(middleware.EnsureValidToken())
+	apiGroup := router.Group("/api").Use(middleware.EnsureValidToken)
 	{
 		boardsController := BoardsController{}
-		boardsGroup := apiGroup.Group("/boards")
-		{
-			boardsGroup.GET("", boardsController.GetAllBoards)
-			boardsGroup.POST("", boardsController.CreateBoard)
-			boardsGroup.GET("/:boardId", boardsController.GetBoard)
-			boardsGroup.DELETE("/:boardId", boardsController.DeleteBoard)
-			boardsGroup.GET("/:boardId/backlog", boardsController.GetBacklog)
-			boardsGroup.GET("/:boardId/issues", boardsController.GetIssues)
+		apiGroup.GET("/boards", boardsController.GetAllBoards)
+		apiGroup.POST("/boards", boardsController.CreateBoard)
+		apiGroup.GET("/boards/:boardId", boardsController.GetBoard)
+		apiGroup.DELETE("/boards/:boardId", boardsController.DeleteBoard)
+		apiGroup.GET("/boards/:boardId/backlog", boardsController.GetBacklog)
+		apiGroup.GET("/boards/:boardId/issues", boardsController.GetIssues)
 
-		}
 		issuesController := IssuesController{}
-		issuesGroup := apiGroup.Group("/issues")
-		{
-			issuesGroup.POST("", issuesController.CreateIssue)
-			issuesGroup.GET("/:issueKeyOrId", issuesController.GetIssue)
-			issuesGroup.PUT("/:issueKeyOrId", issuesController.UpdateIssue)
-			issuesGroup.DELETE("/:issueKeyOrId", issuesController.DeleteIssue)
-		}
+		apiGroup.POST("/issues", issuesController.CreateIssue)
+		apiGroup.GET("/issues/:issueKeyOrId", issuesController.GetIssue)
+		apiGroup.PUT("/issues/:issueKeyOrId", issuesController.UpdateIssue)
+		apiGroup.DELETE("/issues/:issueKeyOrId", issuesController.DeleteIssue)
+
 		sessionsController := SessionsController{}
-		sessionsGroup := apiGroup.Group("/sessions")
-		{
-			sessionsGroup.GET("", sessionsController.GetCurrentUser)
-			sessionsGroup.POST("", sessionsController.Login)
-			sessionsGroup.DELETE("", sessionsController.Logout)
-		}
+		apiGroup.GET("/sessions", sessionsController.GetCurrentUser)
+		apiGroup.POST("/sessions", sessionsController.Login)
+		apiGroup.DELETE("/sessions", sessionsController.Logout)
+
 		// Projects endpoints
 		projectsController := ProjectsController{}
-		projectsGroup := apiGroup.Group("/projects")
-		{
-			projectsGroup.POST("", projectsController.CreateProject)
-			projectsGroup.GET("", projectsController.GetAllProjects)
-			projectsGroup.PUT("/:projectIdOrKey", projectsController.GetDescription)
-			projectsGroup.GET("/:projectIdOrKey", projectsController.UpdateProject)
-			projectsGroup.DELETE("/:projectIdOrKey", projectsController.DeleteProject)
-		}
+		apiGroup.POST("/projects", projectsController.CreateProject)
+		apiGroup.GET("/projects", projectsController.GetAllProjects)
+		apiGroup.PUT("/projects/:projectIdOrKey", projectsController.GetDescription)
+		apiGroup.GET("/projects/:projectIdOrKey", projectsController.UpdateProject)
+		apiGroup.DELETE("/projects/:projectIdOrKey", projectsController.DeleteProject)
+
 		teamsController := TeamsController{}
-		teamsGroup := apiGroup.Group("/teams/:teamId")
-		{
-			teamsGroup.GET("", teamsController.GetMembers)
-			teamsGroup.POST("", teamsController.UpdateTeam)
-			teamsGroup.PUT("/:projectIdOrKey", teamsController.DeleteTeam)
-		}
+		apiGroup.POST("/teams", teamsController.CreateTeam)
+		apiGroup.GET("/teams/:teamId", teamsController.GetMembers)
+		apiGroup.POST("/teams/:teamId", teamsController.UpdateTeam)
+		apiGroup.PUT("//teams:teamId/:projectIdOrKey", teamsController.DeleteTeam)
 	}
 	return router
 }
